The application does not follow the settings for scrollbar hiding. Version (from https://launchpad.net/~libreoffice/+archive/ppa): LibreOffice 3.3.1 OOO330m19 (Build:8) tag libreoffice-3.3.1.2, Ubuntu package 1:3.3.1-1ubuntu3~maverick1 To reproduce the bug: 1) Use LO with the KDE integration 2) Open the writer application 3) Open the options dialog (Tool > Options) 4) Go to "LibreOffice Writer" > View 5) Uncheck "Horizontal scrollbar" and "Vertical scrollbar" Expected behaviour: The scrollbars should be hidden under all conditions. Actual behaviour: The scrollbars are automatically shown or hidden depending on the size of the sheets shown. Please ask if you need additional informations.
I just checked the Gnome integration: Same bug as reported for the kde integration.
NOT reproducible in all details with "LibreOffice 3.3.2RC2 – WIN7 Home Premium (64bit) English UI [OOO330m19 (Build:202 / tag 3.3.2.2)]". My observations (as expected): 1. Scrollbars can not be removed with checkboxes removed if document exceeds screen. 2. Scrollbars can be removed with checkboxes removed if document does not exceed screen For second observation pls. attached screenshots My observations (un expected): 11. When I start LibO from WIN7 Start center and LibO starts with a small document zoom (so that all page is visible on screen) and with both view checkboxes checked, only vertical scrollbar area will be visible. 12. Unchecking and rechecking "Vertical scrollbar view" wil change nothing, you have to do a second uncheck until scrollbar area will disappear. Horizontal scrollbar will appear after uncheck / check "Horizontalscrollbar view" May be that observations 1., 2. show intended behavior? Observations 11. / 12. might be related to or DUP of Bug 30788 - UI: Missing horizontal scroll bar when starting with big zoom @Nico Dorn: Do my observations match with your ones?
Created attachment 44610 [details] Screenshot with comments
@Rainer Bielefeld: No they don't match. Appeareance and disappearance of the scrollbars depend only on the sheet's size. At least virtually, because the scrollbar area can indeed be shown, when the boxes concerned are checked one by one. To reproduce: 1) Uncheck the checkboxes concerned (horizontal scrollbar and vertical scrollbar) 2) Decrease the size of the document, so no scrollbars are needed. 3) Tools > Options > LibreOffice Writer > View > check "Horizontal scrollbar" 4) Hit OK 5) Reproduce the steps 2-5 with the "Vertical scrollbar" box. Now both scrollbar areas can be seen (but not the scrollbars). For illustration see the graphics attached (next post). Explanations: Image 1: Horizontal scrollbar area is visible Image 2: Horizontal and vertical scrollbar areas are visible Image 3: Document size increased => horizontal scrollbar acutally appears Image 4: Document size further increased => both scrollbars are visible Image 5: Document size decreased (first state) => no scrollbars and no scrollbar area can be seen In short: The application does not follow the options specified. And the actual behaviour seems to depend on the OS.
Created attachment 44611 [details] Behaviour of scrollbars (Linux OS)
May be I should try to think some more simple. I see some differences between checked and unchecked visibility for start situation with new document and immediately after modifications, but during further use of the document I see no difference between checked and unchecked visibility for a single page document: When I increase zoom to 300% both sliders appear When I decrease zoom to 30% both sliders disappear No matter whether visibility is checked or unchecked. @Nico Dorn: That's your report with my words? Can you contribute a link or anything else from where you got your information "Expected behaviour: The scrollbars should be hidden under all conditions." Hints under <http://help.libreoffice.org/Common/View_1#Horizontal_scrollbar> are very rare. @Kendy: Do you have any more detailed information that should be integrated into HELP?
(In reply to comment #6) > When I increase zoom to 300% both sliders appear > When I decrease zoom to 30% both sliders disappear > No matter whether visibility is checked or unchecked. You got it! That's what I meant. > Can you contribute a link or anything else from where you got your information > "Expected behaviour: The scrollbars should be hidden under all conditions." It is a regression to OpenOffice (version 3.2?). I just checked an old installation of Kubuntu 9.10 with OpenOffice 3.1.1 (OOO310m19 (Build: 9420)) on my computer which shows the behaviour I described as "expected". I think that the images attached are self-explanatory. It's very easy: I want the scrollbars to be hidden everytime when I uncheck the checkboxes. ;-)
Created attachment 44614 [details] Scrollbar behaviour on OpenOffice 3.1.1
I can confirm your observations with 3.1.1 For me the question is for what we need that options. I am very satisfied with an auto appear / disappear as we have in LibO, and I can't see any need for a 300% zoom without scrollbars (as we have it in 3.1.1 without checked scrollbar visibility). For what can that be good? Can you list some useful applications?
"Ooo-Dev 3.4.0 multilingual version English UI WIN XP: [OOo300m103 (Build 9578)]" behaves the same way like OOo3.1.1. I still can't see any useful application for that checkboxes since we have the "auto hide" @Cédric Your area? Might be a half way done improvement?
(In reply to comment #9) > For me the question is for what we need that options. I am very satisfied with > an auto appear / disappear as we have in LibO, and I can't see any need for a > 300% zoom without scrollbars (as we have it in 3.1.1 without checked scrollbar > visibility). For what can that be good? Can you list some useful applications? Took me a while to answer, sorry for that! First off: There is no need to talk about a 300% zoom. 110% (the smallest zoom possible for me) are enough to make the scrollbars appear. Why I would appreciate the option to work again: It is primarly about space; for a scrollbar 20px of the width resp. height of the document are lost. Sounds small, but take a look at the second image of the use case I uploaded. With 20px gained I could almost see the whole comment field. Second of all it's about look and feel. Horizontal scrollbars are evil, especially if you do not intend to use them. As for myself, I always navigate with the keyboard. The uploaded images (see below) illustrate my everyday usage of the program. In short: I would appreciate that the option works again. But at least the UI has to be fixed. That's clear.
Created attachment 44847 [details] personal use case
For first we should wait for a developer's comment what's the intended UI and behavior. I see a low priority importance to leave these options due to reasons reporter explained, but may be next month someone will ask for half width scroll sliders? And yes, the possibility to customize icon positions in navigator would be fine. @Nico: You should put money aside for a bigger monitor ;-) May be you can file an enhancement request for "customize icon positions in navigator" if it doesn't already exist?
The bug is still present in 3.4.1.
No need for superfluous NEEDINFO or infoprovider tags -- this bug is assigned.
*** Bug 46754 has been marked as a duplicate of this bug. ***
I think that the main problem with this desactivation of the ability to hide the horizontal scrollbar occurs with the optimal zoom. When we are in optimal zoom, we don't need to scroll horizontally, even if the page borders are out of the screen. So it should be possible to hide the scrollbar at least in optimal zoom. Indeed, it takes some place, and it can be very annoying on small screens (especially on netbooks, or on the emerging ultrabooks).
Let me take this, please. :) I have some experience with those scrollbars in Writer...
Ivan Timofeev committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=28f2c6b826f1693dc5136d552e5446d3d52aa329 fdo#35427: repair Tools > Options > Writer > View - Show Scroll Slider options The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
the fix is waiting for review for libreoffice-3-6: https://gerrit.libreoffice.org/1008
Ivan Timofeev committed a patch related to this issue. It has been pushed to "libreoffice-3-6": http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d303cb331ab273538d63b226250a6950718ea1f&g=libreoffice-3-6 fdo#35427: repair Tools > Options > Writer > View - Show Scroll Slider options It will be available in LibreOffice 3.6.4. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
(In reply to comment #19) > Ivan Timofeev committed a patch related to this issue. > It has been pushed to "master": > > http://cgit.freedesktop.org/libreoffice/core/commit/ > ?id=28f2c6b826f1693dc5136d552e5446d3d52aa329 > > fdo#35427: repair Tools > Options > Writer > View - Show Scroll Slider > options Hi Ivan, It seems that since this commit I get the following warning when I launch the master : (soffice:27654): GLib-GObject-WARNING **: g_object_get_valist: object class `GtkSettings' has no property named `gtk-primary-button-warps-slider' Are aware of that ? Best regards. JBF
(In reply to comment #22) > It seems that since this commit I get the following warning when I launch > the master : > (soffice:27654): GLib-GObject-WARNING **: g_object_get_valist: object class > `GtkSettings' has no property named `gtk-primary-button-warps-slider' This warning is a side-effect of the fix for Bug 56198. I am pushing a fix now. ;)