fdo#35427: repair Tools > Options > Writer > View - Show Scroll Slider options

Change-Id: I2bacd52a182a2dba3dbe6c6d63861470e87b6066